added the font family for the challenge

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
-  <title>fylo data storage component</title>
-</head>
-<body>
-  <main class="container">
-    <div class="main-container">
-      <div class="head-container">
-        <img src="./images/logo.svg" alt="logo image">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <title>fylo data storage component</title>
+  </head>
+  <body>
+    <main class="container">
+      <div class="main-container">
+        <div class="head-container">
+          <img src="./images/logo.svg" alt="logo image" />
+        </div>
+        <div class="body-container">
+          <img src="./images/icon-document.svg" alt="document image" />
+          <img src="./images/icon-folder.svg" alt="folder image" />
+          <img src="./images/icon-upload.svg" alt="upload image" />
+        </div>
       </div>
-      <div class="body-container">
-        <img src="./images/icon-document.svg" alt="document image">
-        <img src="./images/icon-folder.svg" alt="folder image">
-        <img src="./images/icon-upload.svg" alt="upload image">
-      </div>
-    </div>
-    <div class="sub-container">
-      <p>You've used <span>815 GB</span> of your storage</p>
+      <div class="sub-container">
+        <p>You've used <span>815 GB</span> of your storage</p>
         <div class="outer">
           <div class="inner">
             <div class="data-indicator"></div>
@@ -31,8 +39,8 @@
           <p>0GB</p>
           <p>1000GB</p>
         </div>
-    </div>
-    <p class="data-left-counter"><span>185 </span> GB LEFT</p>
-  </main>
-</body>
+      </div>
+      <p class="data-left-counter"><span>185 </span> GB LEFT</p>
+    </main>
+  </body>
 </html>
